# CypressFX3Template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
cmake/: fx3-sdk.cmake  fx3-toolchain.cmake
src/: main.c
